    * Adds explicit JWT "typ" (checking) support to SoftwareStatementProcessor.

version 11.19 (2024-08-29)
    * Adds static OIDCScopeValue.resolveClaimNames(Scope, ...) helper methods.

version 11.19.1 (2024-09-05)
    * OIDCScopeValue.resolveClaimNames(Scope, ...) must ignore the "openid"
      scope value that resolves to "sub".

version 11.20 (2024-09-29)
    * TokenRevocationRequest supports device_secret as token.
    * Adds DeviceSecretToken class to represent DeviceSecret instances as a
      Token.
    * Adds JSONObjectUtils.getNonBlankString method.
    * Certain parse methods must prevent unchecked IllegalArgumentExceptions
      due to empty or blank String (iss #479).
    * RefreshToken.parse(JSONObject) must not throw unchecked exception on
      empty or blank String (iss #480).

version 11.20.1 (2024-10-10)
    * OIDCResponseTypeValidator.validate must not include the response type
      value in the thrown IllegalArgumentException, the exception message is
      used to construct ErrorObject instances (iss #483).
    * AuthenticationRequest.parse must not include the max_age value in
      ParseException instances (iss #482).
    * Display.parse must not include the value in ParseException instances (iss
      #484).

version 11.20.2 (2025-01-08)
    * Hardens AuthorizationRequest.parse when dealing with an illegal URI
      representation in the redirect_uri parameter. URISyntaxException messages
      must not be included in the error_description to avoid illegal chars
      according to RFC 6749, section 5.2 (iss #487).
    * Updates to Nimbus JOSE+JWT 10.0.1
    * Updates to Tink 1.16.0
    * Updates to BouncyCastle 1.79

version 11.21 (2025-01-10)
    * JWTAssertionDetails.toJSONObject() must return a string "aud" claim when
      the audience is single valued (iss #488).
    * TokenTypeURI.DEVICE_SECRET is changed to
      `urn:openid:params:token-type:device-secret` (OpenID Connect Native SSO
      for Mobile Apps 1.0 - draft 07).